<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#22343C"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">
<HorizontalScrollView
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/gray_bg"
            android:text="@string/all"
            android:textAllCaps="false"
            android:textColor="#96A7AF"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnParty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/gray_bg"
            android:text="@string/party"
            android:textAllCaps="false"
            android:textColor="#96A7AF"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCamping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/gray_bg"
            android:text="@string/camping"
            android:textAllCaps="false"
            android:textColor="#96A7AF"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRyanGosling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/gray_bg"
            android:text="@string/ryan_gosling"
            android:textAllCaps="false"
            android:textColor="#96A7AF"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFightClub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/gray_bg"
            android:text="@string/fight_club"
            android:textAllCaps="false"
            android:textColor="#96A7AF"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBladeRunner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/gray_bg"
            android:text="@string/blade_runner"
            android:textAllCaps="false"
            android:textColor="#96A7AF"
            android:textSize="14sp" />



    </LinearLayout>
</HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>